<resources>
    <string name="app_name">HodooScale</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="istyle_lost_password">비밀번호를 분실하셨습니까?</string>
    <string name="istyle_label_email">이메일</string>
    <string name="istyle_label_confirm_password">비밀번호 재확인</string>
    <string name="istyle_label_nickname">닉네임</string>
    <string name="istyle_label_country">국가</string>
    <string name="istyle_label_sex">성별</string>
    <string name="istyle_label_agree">회원약관 및 개인정보수집에 동의합니다.</string>
    <string name="istyle_label_term"><u>회원약관</u></string>
    <string name="istyle_label_private"><u>개인정보 수집 및 이용안내</u></string>
    <string name="istyle_btn_text">계정 생성</string>
    <string name="istyle_not_valid_email_format">이메일 형식에 맞지 않습니다.</string>
    <string name="istyle_enter_the_password">비밀번호를 입력하세요.</string>
    <string name="istyle_enter_your_confirmation_password">확인 비밀번호를 입력하세요.</string>
    <string name="istyle_password_is_incorrect">비밀번호가 맞지 않습니다.</string>
    <string name="istyle_enter_your_nik_name">닉네임을 입력하세요.</string>
    <string name="men">남성</string>
    <string name="woman">여성</string>
    <string name="male">수컷</string>
    <string name="femle">암컷</string>
    <string name="pet_width">체장</string>
    <string name="pet_height">체고</string>
    <string name="pet_unit">단위</string>
    <string name="pet_weight">체중</string>
    <string name="pet_kg">Kg</string>
    <string name="compleate">완료</string>
    <string name="cancle">취소</string>
    <string name="agree">동의</string>
    <string name="press_back_message">Press \'Back\' button again to exit.</string>
    <string name="password">비밀번호</string>
    <string name="gallery">갤러리</string>
    <string name="camera">카메라</string>
    <string name="failed">failed</string>
    <string name="cup">컵</string>
    <string name="ea">개</string>
    <string name="food">음식</string>
    <string name="edit_success">정보를 변경하였습니다.</string>
    <string name="log_out">로그아웃</string>
    <string name="change_user_account_info">사용자 계정 정보</string>
    <string name="withdraw" translatable="false">회원탈퇴</string>
    <string name="withdraw_subscript" translatable="false">탈퇴하시면 HODOO 서비스를 이용하실 수 없습니다.\n정말 탈퇴하시겠습니까?</string>
    <string name="excess">초과</string>
    <string name="recommend">권장</string>
    <string name="istyle_already_a_member">이미 호두 회원이신가요?</string>
    <string name="istyle_forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="basin_info_regist_title">펫 추가</string>
    <string name="disease_information_regist_title">펫의 병력</string>
    <string name="physique_information_regist_title">펫의 체격</string>
    <string name="weight_check_title">체중상태 체크</string>
    <string name="weight_title">체중관리</string>
    <string name="meal_title">식사관리</string>
    <string name="hodoo_link_title">함께관리</string>
    <string name="wifi_list_title">와이파이 설정</string>
    <string name="find_hodoo_title">스캐닝</string>
    <string name="istyle_login_title">로그인</string>
    <string name="istyle_statistic">통계</string>
    <string name="istyle_feed">사료</string>
    <string name="istyle_change_password">비밀번호 변경</string>
    <string name="istyle_my_account">내 계정</string>
    <string name="istyle_list_bowelplate">배변판 리스트</string>
    <string name="istyle_select_device">기기선택</string>
    <string name="istyle_setting">설정</string>
    <string name="istyle_management_pet">펫 관리</string>
    <string name="istyle_management_user">유저관리</string>
    <string name="istyle_find_password">비밀번호찾기</string>
    <string name="istyle_setting_menu_my_account">내 계정</string>
    <string name="istyle_setting_menu_notice">공지사항</string>
    <string name="istyle_setting_menu_info_fo_hodoo_scale">호두 스케일 소개</string>
    <string name="istyle_setting_menu_reset_data">데이터 초기화</string>
    <string name="istyle_setting_menu_setting_device">기기 설정</string>
    <string name="istyle_setting_menu_management_user_group">사용자 그룹 관리</string>
    <string name="istyle_setting_menu_management_pet">펫 관리</string>
    <string name="message">Message</string>
    <string name="vailed_email">이메일 형식에 맞지 않습니다.</string>
    <string name="signup_title">회원가입</string>
    <string name="agree_terms">약관 동의</string>
    <string name="agree_terms_message">개인정보 수집 및 이용에 동의합니다.</string>
    <string name="term_of_service">서비스 이용약관</string>
    <string name="agree_of_service">이용약관에 동의합니다.</string>
    <string name="istyle_agree_to_the_terms">약관에 동의하세요.</string>
    <string name="add_pet_name">펫의 이름</string>
    <string name="add_pet_type">펫의 품종</string>
    <string name="add_pet_birthday">생년월일</string>
    <string name="add_pet_gender">성별</string>
    <string name="add_pet_neuter">중성화 여부</string>
    <string name="add_pet_next_btn">다음 단계</string>
    <string name="physique_information_guide_text1">펫의 정확한 건강관리를 위해 정보를 꼭 입력해주세요.</string>
    <string name="physique_information_guide_text2">체장 : 엉덩이부터 가슴까지</string>
    <string name="physique_information_guide_text3">체고 : 앞 발바닥부터 목과 등의 경계선까지</string>
    <string name="wifi_connection">WIFI 연결</string>
    <string name="wifi_connection_advice">WIFI 신호 상태가 가장 좋은 인터넷을 사용해 주세요.</string>
    <string name="wifi_connection_popup_password_hint">비밀번호를 입력하세요.</string>
    <string name="find_hodoo_message1">Hodoo Scale</string>
    <string name="find_hodoo_message2">연결중입니다. 프리미엄 기기를 공유기에 가까이 놓아주세요.</string>
    <string name="explanation_of_password_change">주기적인 비밀번호 변경은 개인정보를 안전하게 보호하고, 개인정보도용 피해를 예방합니다.</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="password_entry_limit">8자~20자, 영문, 숫자, 특수문자 사용</string>
    <string name="new_password_hint">새비밀번호 입력</string>
    <string name="confirm">확인</string>
    <string name="plus_friend_popup_email_hint">이메일을 입력하세요.</string>
    <string name="istyle_new_group_user">새 구성원</string>
    <string name="device_setting_activity_title">기기변경</string>
    <string name="istyle_firmware_update">펌웨어 업그레이드 1.2.0 업데이트</string>
    <string name="istyle_update">업그레이드</string>
    <string name="istyle_change_wifi_setting">Wifi 변경 설정</string>
    <string name="istyle_remove_bowelplate">체중계 연결 해지</string>
    <string name="istyle_calories_taken_today">오늘 섭취한 칼로리</string>
    <string name="istyle_food_taken_today">오늘 섭취한 음식</string>
    <string name="istyle_not_found_bowelplate">주변에 배변판을 찾을 수 없습니다.</string>
    <string name="istyle_retry">다시시도</string>
    <string name="istyle_buy">구입하기</string>
    <string name="send_btn_text">인증번호 전송</string>
    <string name="cofirm_btn_text">확인</string>
    <string name="istyle_today">하루</string>
    <string name="istyle_one_week">한주</string>
    <string name="istyle_one_month">한달</string>
    <string name="istyle_one_year">년</string>
    <string name="average_weight_for_today">AVERAGE WEIGHT FOR TODAY</string>
    <string name="average_temp_for_today">AVERAGE TEMP FOR TODAY</string>
    <string name="weight_for_today">오늘의 체중</string>
    <string name="temp_for_today">today\'s temp</string>
    <string name="bcs_step_str">BCS STEP</string>
    <string name="bcs_description_str">BCS DESCRIPTION</string>
    <string name="last_sync_refresh_str">Last refresh</string>
    <string name="not_data">No Data</string>
    <string name="today_intake_kcal">일일 섭취 총 칼로리</string>
    <string name="istyle_one_hundred_g_supply">100g 제공 칼로리</string>
    <string name="istyle_one_hundred_g_nutrient_content">100g당 영양소 함유량</string>
    <string name="istyle_add_pet">펫추가</string>
    <string name="compleate_btn_text">완료</string>
    <string name="istyle_new_password_setting">새로운 비밀번호 설정</string>
    <string name="istyle_new_password_setting_hint">새로운 비밀번호 설정</string>
    <string name="istyle_enter_new_password">새 비밀번호 입력</string>
    <string name="title_device_regist">기기등록</string>
    <string name="message_device_regist1">배변판관 연결되어 있지 않습니다.</string>
    <string name="message_device_regist2">배변판을 등록해 주세요.</string>
    <string name="change_user_info_email">이메일</string>
    <string name="tip">Tip</string>
    <string name="save">save</string>
    <string name="not_found_email">not found email</string>
    <string name="id_password_do_not_match">id password do not match</string>
    <string name="bowel_plate">배변판</string>
    <string name="pet_bed">침대</string>
    <string name="cushion">방석</string>
    <string name="harness">하네스</string>
    <string name="pendant">목걸이</string>
    <string name="istyle_search_info">자주 기록된 음식은 이곳에 자동으로 저장되어, 좀 더 편안한 검색과 기록을 하실 수 있습니다. 음식에 들어가는 재료를 따로 나누거나, 보다 일반적은 음식 이름으로 검색해주세요.</string>
    <string name="istyle_recent_search_word">최근검색어</string>
    <string name="istyle_search_list">검색목록</string>
    <string name="istyle_add_device">+ 기기추가</string>
    <string name="istyle_crude_protein">조단백</string>
    <string name="istyle_crude_pat">조지방</string>
    <string name="istyle_crude_fiber">조섬유</string>
    <string name="istyle_crude_ash">조회분</string>
    <string name="istyle_carbohydrate">탄수화물</string>
    <string name="istyle_regist">등록</string>
    <string name="istyle_plate_found_message">배변판을 찾았습니다. 연결버튼을 눌러 배변판을 등록하세요.</string>
    <string name="istyle_use_the_current_wifi">현재폰에 연결된 WIFI 사용</string>
    <string name="choice_country">국가</string>
    <string name="bcs_watching_tv_desc">동영상을 본 후 반려견의 BCS 단계를 선택하십시오.</string>
    <string name="select_bcs">Select BCS</string>
    <string name="istyle_required_select_bcs_message">BCS를 선택하세요.</string>
    <string name="istyle_statistic_week">주</string>
    <string name="istyle_statistic_month">월</string>
    <string name="detail_meal_info">상세 성분</string>
    <string name="delete">삭제</string>
    <string name="device_is_already_registered">이미 등록된 기기입니다.</string>
    <string name="one_day">하루</string>
    <string name="one_week">한주</string>
    <string name="one_month">한달</string>
    <string name="one_year">년</string>
    <string name="meal">식사</string>
    <string name="activity">활동</string>
    <string name="time">시</string>
    <string name="activity_title">활동 관리</string>
    <string name="weight_content">스마트 배변판을 통해\n자동으로 측정된 체중과 변화를\n한눈에 확인할 수 있어요</string>
    <string name="meal_content">건강한 체중을 위한 적정 섭취\n칼로리와 섭취한 음식의 영양균형\n상태를 분석해드려요</string>
    <string name="activity_content">현재 산책지수를 확인할 수 있고,\n건강상태에 적절한 운동량(산책량)을\n확인 할 수 있어요</string>
    <string name="hodoo_link_content">함께 생활하는 가족,\n친구들과 같이 반려동물을 관리할 수 있어요</string>
    <string name="wind_speed">풍속</string>
    <string name="uv_index">자외선 지수</string>
    <string name="ozone_index">오존 지수</string>
    <string name="today_all_calroie">오늘의 총 소비 칼로리</string>
    <string name="question_of_change_the_password">비밀번호를 변경하시겠습니까?</string>
    <string name="confirm_new_password">새 비밀번호 확인</string>
    <string name="not_mathed_old_password">이전비밀번호와 동일하지 않습니다.</string>
    <string name="password_edit_success">비밀번호를 변경했습니다.</string>
    <string name="pet_name_empty_msg">펫의 이름을 입력하세요.</string>
    <string name="pet_birthday_empty_msg">생년월일을 입력하세요</string>
    <string name="forgot_password_sub_scription">이메일로 임시비밀번호를 발송해드립니다.</string>
    <string name="sign_up_finish_title">회원가입 완료</string>
    <string name="sign_up_finish_sub_scription">등록하신 이메일로 인증메일을 발송드렸습니다.\n이메일 인증을 완료하면 HODOO의 서비스를 이용하실 수 있습니다.</string>
    <string name="send_mail_failed">메일 전송에 실패하였습니다.</string>
    <string name="feed_order">급식하기</string>
    <string name="pet_feeder">급식기</string>
    <string name="weight_data_available">측정된 체중 데이터가 없습니다.</string>
    <string name="wether_tip_title">다이어트 할 때는 운동도 많이 시켜야 하나?</string>
    <string name="sign_up__password_hint">비밀번호(8자 이상)</string>
    <string name="sign_up__nick_name_hint">닉네임(9자 이상)</string>
</resources>