<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.animal.scale.hodoo.activity.setting.account.change.password.ChangePasswordActivity" />

        <variable
            name="activityInfo"
            type="com.animal.scale.hodoo.domain.ActivityInfo" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/hodoo_background_color"
        android:gravity="center_horizontal"
        tools:context=".activity.setting.account.change.password.ChangePasswordActivity">

        <include
            layout="@layout/common_toolbar"
            bind:activityInfo="@{activityInfo}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_toolbar"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/hodoo_light_message_pink"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/explanation_of_password_change"
                    android:textColor="@color/hodoo_text_gray"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <com.animal.scale.hodoo.custom.view.input.CustomCommonEditText
                    android:id="@+id/old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:focusable="true"
                    android:enabled="false"
                    app:editTextResourceId="@layout/password_edittext"
                    app:errorMessageSize="11"
                    app:title="@string/current_password"
                    app:titleSize="13" />

                <com.animal.scale.hodoo.custom.view.input.CustomCommonEditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:focusable="true"
                    android:enabled="false"
                    app:editTextResourceId="@layout/password_edittext"
                    app:errorMessageSize="11"
                    app:title="@string/new_password_hint"
                    app:titleSize="13" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="12dp"
                    android:text="@string/password_entry_limit"/>

                <com.animal.scale.hodoo.custom.view.input.CustomCommonEditText
                    android:id="@+id/cofirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:focusable="true"
                    android:enabled="false"
                    app:editTextResourceId="@layout/password_edittext"
                    app:errorMessageSize="11"
                    app:title="@string/confirm_new_password"
                    app:titleSize="13" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/submit"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="18dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/rounded_pink_btn"
                        android:onClick="@{activity::onClickSubmitBtn}"
                        android:text="@string/cofirm_btn_text"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>